Added BasePlugin dependency